    "-x simul-method=..." option (see spot-x(7)).

  - The automaton parser will now recognize lines of the form
      #line 10 "filename"
    that may occur *between* the automata of an input stream to specify
    that error messages should be emitted as if the next automaton
    was read from "filename" starting on line 10.  (Issue #232)

  Python:

  - Bindings for functions related to games.
    See https://spot.lrde.epita.fr/ipynb/games.html for examples.

  - spot::twa::prop_set was previously abstent from the Python
    binding.  It is now available as spot.twa_prop_set (issue #453).

  Bugs fixed:

  - tgba_determinize() could create parity automata using more colors
    than necessary.  (Related to issue #298)

  Deprecation notices:

  - twa_graph::defrag_states() and digraph::defrag_states() now take
    the renaming vector by reference instead of rvalue reference.  The
    old prototype is still supported but will emit a deprecation
    warning.

New in spot 2.9.7 (2021-05-12)

  Bugs fixed:

  - Some formulas using ->, <->, or xor were not properly detected as
    purely universal or pure eventualities.

  - autfilt --keep-states=... could incorrectly mention --mask-acc
    when diagnosing errors.

  - Work around GraphViz issue 1931, causing spurious failures in the
    test suite.

  - Miscelaneous documentation fixes.

New in spot 2.9.6 (2021-01-18)

  Build:

  - Build scripts are now compatible with Autoconf 2.70 (Issue #447)
    and require at least Autoconf 2.69 (released in 2012).

  - Debian builds use updated standards.

  Bugs fixed:

  - twa_graph::merge_edges() could fail to merge two transitions if the
    destination transition was the first of the automaton.  (Issue #441)

  - On non-deterministic automata, iterated_simulations() was
    performing an (unnecessary) second iteration even when the first
    one failed to reduce the automaton.  (Issue #442)

  - When passed an incomplete automaton as input, tgba_determinize()