@@ -45,18 +45,18 @@ parity 17;
 parity 13;
 0 1 0 1,2 "INIT";
 2 1 1 3;
-3 3 0 4,5;
+3 3 0 5,4;
+4 2 1 12,3;
+12 2 0 5,4;
 5 1 1 6,7;
-7 1 0 8,9;
-9 1 1 10,11;
-11 1 0 8,9;
-8 3 1 3,12;
-12 2 0 4,5;
-4 2 1 3,12;
-10 2 0 8,9;
+7 1 0 9,8;
+8 3 1 12,3;
+9 1 1 11,10;
+10 2 0 9,8;
+11 1 0 9,8;
 6 1 0 13,4;
 13 1 1 6,10;
-1 1 1 3,6;
+1 1 1 6,3;
 parity 5;
 1 1 0 4,5 "INIT";
 5 5 1 0,1;
@@ -86,11 +86,11 @@ aag 16 1 2 1 13
 16 14 3
 18 14 2
 20 5 6
-22 20 2
-24 20 3
-26 17 25
+22 20 3
+24 20 2
+26 17 23
 28 11 26
-30 19 23
+30 19 25
 32 13 30
 i0 a
 o0 b
@@ -133,11 +133,11 @@ aag 16 1 2 2 13
 16 14 3
 18 14 2
 20 5 6
-22 20 2
-24 20 3
-26 17 25
+22 20 3
+24 20 2
+26 17 23
 28 11 26
-30 19 23
+30 19 25
 32 13 30
 i0 a
 o0 b
@@ -378,6 +378,6 @@ f='Fp0 U XX((p0 & F!p1) | (!p0 & Gp1))'
 ltlsynt --verbose --algo=ps --outs=p1 --ins=p0 -f "$f" 2>err
 grep 'DPA has 13 states' err
 ltlsynt -x dpa-simul=0 --verbose --algo=ps --outs=p1 --ins=p0 -f "$f" 2>err
-grep 'DPA has 30 states' err
+grep 'DPA has 29 states' err
 ltlsynt --verbose -x wdba-minimize=1 --algo=ps --outs=p1 --ins=p0 -f "$f" 2>err
 grep 'DPA has 12 states' err
