@@ -960,23 +960,23 @@
       "[!0] 3 {1}\n",
       "[0] 4 {1}\n",
       "State: 2\n",
-      "[0] 4 {1}\n",
       "[!0] 5 {1}\n",
+      "[0] 4 {1}\n",
       "State: 3\n",
       "[!1] 6 {1}\n",
       "[1] 7 {2}\n",
       "State: 4\n",
       "[t] 8 {2}\n",
       "State: 5\n",
-      "[1] 7 {2}\n",
       "[!1] 6 {1}\n",
+      "[1] 7 {2}\n",
       "State: 6\n",
       "[t] 3 {1}\n",
       "State: 7\n",
       "[t] 5 {2}\n",
       "State: 8\n",
-      "[0] 4 {2}\n",
       "[!0] 9 {1}\n",
+      "[0] 4 {2}\n",
       "State: 9\n",
       "[t] 10 {1}\n",
       "State: 10\n",
